--- a/Support/Guides and Documentation/Region_Recode_Checks.Rmd
+++ b/Support/Guides and Documentation/Region_Recode_Checks.Rmd
@@ -77,7 +77,7 @@ After recoding to the same levels, there seems to be pretty good visual evidence
 hist <- ggplot(lfs2016_reg, aes(reg)) +
   geom_histogram(binwidth = 1) + 
   scale_x_continuous(n.breaks = 10) +
-  facet_grid(rows = vars(svymo)) + 
+  facet_grid(rows = vars(svymo), labeller = label_both) + 
   theme_minimal() +
   labs(x = "Region Numeric Value", y = "Count")
 
