--- a/Support/Guides and Documentation/Region_Recode_Checks.Rmd
+++ b/Support/Guides and Documentation/Region_Recode_Checks.Rmd
@@ -84,3 +84,67 @@ hist <- ggplot(lfs2016_reg, aes(reg)) +
 hist
 ```
 
+
+# 2006 
+
+Repeating the same steps for 2006 to verify that the numeric values are likely the same as the labeled ones. 
+
+```{r, echo=FALSE}
+lfs2006jan <- readRDS(file.path(GLD, "PHL_2006_LFS/PHL_2006_LFS_v01_M/Data/R/LFS JAN2006.Rds")) %>%
+  select(reg, svymo)
+lfs2006apr <- readRDS(file.path(GLD, "PHL_2006_LFS/PHL_2006_LFS_v01_M/Data/R/LFS APR2006.Rds")) %>%
+  select(reg, svymo)
+lfs2006jul <- readRDS(file.path(GLD, "PHL_2006_LFS/PHL_2006_LFS_v01_M/Data/R/LFS JUL2006.Rds")) %>%
+  select(creg, svymo)
+lfs2006oct <- readRDS(file.path(GLD, "PHL_2006_LFS/PHL_2006_LFS_v01_M/Data/R/LFS OCT2006.Rds")) %>%
+  select(creg, svymo)
+
+```
+
+Resulting comparison histogram looks good. Provisional stylized support for 2006.
+
+```{r}
+# append and trim 
+lfs2006jan <- lfs2006jan %>%
+  mutate(
+    reg_num = as.numeric(reg),
+    reg_num = case_when(reg_num == 4  ~ 41,
+                         reg_num == 17 ~ 42, 
+                         TRUE      ~ reg_num))
+
+lfs2006apr <- lfs2006apr %>%
+  mutate(
+    reg_num = as.numeric(reg),
+    reg_num = case_when(reg_num == 4  ~ 41,
+                         reg_num == 17 ~ 42, 
+                         TRUE      ~ reg_num))
+
+lfs2006jul <- lfs2006jul %>%
+  mutate(
+    reg_num = case_when(creg == 4  ~ 41,
+                         creg == 17 ~ 42, 
+                         TRUE      ~ creg)) 
+
+lfs2006oct <- lfs2006oct %>%
+  mutate(
+    reg_num = as.numeric(creg),
+    reg_num = case_when(reg_num == 4  ~ 41,
+                         reg_num == 17 ~ 42, 
+                         TRUE      ~ reg_num))
+  
+
+lfs2006_reg <- bind_rows(lfs2006jan, lfs2006apr, lfs2006jul, lfs2006oct)
+assertthat::assert_that(sum(is.na(lfs2006_reg$reg_num )) == 0 ) # ensure we have no missing values in the new numeric var
+
+
+# ggplot 
+hist2006 <- ggplot(lfs2006_reg, aes(reg_num)) +
+  geom_histogram(binwidth = 1) + 
+  scale_x_continuous(n.breaks = 10) +
+  facet_grid(rows = vars(svymo), labeller = label_both) + 
+  theme_minimal() +
+  labs(x = "Region Numeric Value", y = "Count")
+
+hist2006
+```
+
