--- a/Support/Country Survey Details/PHL/LFS/Rmd/Administrative_Levels.Rmd
+++ b/Support/Country Survey Details/PHL/LFS/Rmd/Administrative_Levels.Rmd
@@ -211,25 +211,33 @@ above recoding takes place:
 ## Province
 
 The 2nd Administrative Level is Province. The value labels appear to be
-stable across rounds and years, with no mention of changes in the 2003
-administrative revisions above. Furthermore, the some rounds are numeric
-while others are labeled. Starting in July 2003, the province variables
-are only encoded as numeric -- some years afterwards have miscellaneous
-rounds also encoded with a secondary variable `_name` that stores the
-province name in string format. From the label data that exists, the
-labeled variabled are stable across rounds within the same year, but
-reflect small changes as provinces are added.
+mostly stable across rounds and years, with no mention of changes in the
+2003 administrative revisions above. Furthermore, the some rounds are
+numeric while others are labeled. Starting in July 2003, the province
+variables are only encoded as numeric -- some years afterwards have
+miscellaneous rounds also encoded with a secondary variable `_name` that
+stores the province name in string format. From the label data that
+exists, the labeled variables are stable across rounds within the same
+year, but appear to reflect small changes as provinces are added.
+
+Without a main data source for the labels, a few assumptions will need
+to be made.
+
+1.  **Transitive Property of Labels**: Adopting from the [mathematical
+    transitive
+    property](https://en.wikipedia.org/wiki/Transitive_relation), we
+    have to assume that if value `1 = "Province 1"` in Year 1, Round 1,
+    and `1 = "Province 1"` in Year 2, Year 3, and all other years
+    available, then value `1 = "Province 1"` also in Years where we *do
+    not* have label information.
+
+2.  **Identity Property of Labels**: Similarly, we should also assume
+    that each label's value, when equivalent or virtually similar,
+    actually refers to the same region. In other words, `"Province 1"`
+    is actually the same `"Province 1"` every year. This may seem
+    obvious, but sometimes regions and provinces go through political or
+    geographic changes — such as divisions, combining, or changing of
+    boundaries, etc — that may render them practically different, but
+    named the same.
 
 ### Province encoding methodology
-
-For consistency across years, except for the case of 2003, I will simply
-append the data within-year and not assign the labels. For cases where
-the user wants to access the value label data where they do exist, a
-`label dir` or `label list PROV` will find or often directly retrieve
-the label info as it was provided to us. However, for data at this
-secondary geographic/administrative level, the labels are often not
-necessary, as the primary unit of analysis is the region level. The
-province variable in the 2019 data appears to be missing.
-
-No value recoding will occur from the original values for any round in
-any year.
